[package]
name = "kak-tree"
version = "0.1.0"
authors = ["Ruslan Prokopchuk <fer.obbee@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
itertools = "0"
serde = { version = "1", features = ["derive"] }
slog = { version = "2", features = ["release_max_level_debug"] }
slog-scope = "4"
sloggers = "0"
toml = "0"
tree-sitter = "0"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

# [profile.release]
# lto = true

[features]
default = ["rust"]
all = [
    "bash",
    "c_sharp",
    "c",
    "cpp",
    "css",
    "go",
    "haskell",
    "html",
    "java",
    "javascript",
    "json",
    "julia",
    "ocaml",
    "php",
    "python",
    "ruby",
    "rust",
    "scala",
    "typescript"
]
bash = []
c_sharp = []
c = []
cpp = []
css = []
go = []
haskell = []
html = []
java = []
javascript = []
json = []
julia = []
ocaml = []
php = []
python = []
ruby = []
rust = []
scala = []
typescript = []

